Poblacion de la base de datos

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,15 +3,12 @@
     <strong>Title:</strong>
     <%= post.title %>
   </p>
-
   <p>
     <strong>Description:</strong>
     <%= post.description %>
   </p>
-
   <p>
-    <strong>When went:</strong>
+    <strong>Publicado:</strong>
     <%= post.when_went %>
   </p>
-
 </div>
