--- a/app/views/comments/_post_comments.html.erb
+++ b/app/views/comments/_post_comments.html.erb
@@ -1,8 +1,11 @@
-<div>
+<div class='mt-3'>
   <% @comments.each do |comment| %>
-    <p>
-      <%= image_tag(comment.user.photo) %>
-      <%= comment.content %>
-    </p>
+    <div class='d-flex gap-3 align-items-start'>
+      <%= image_tag "#{comment.user.photo}", class:'rounded-circle img-thumbnail', style:"max-width:5%" %>
+      <p class='w-75'>
+        <span class='fw-bold'> <%=comment.user.name%>:</span>
+        <%= comment.content %>
+      </p>
+    </div>
   <% end %>
 </div>
