--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,7 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<div id="posts">
+<h1 class='mb-5'>Publicaciones de mininos</h1>
+<div id="posts" class='d-flex flex-column gap-5'>
   <% @posts.each do |post| %>
     <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
   <% end %>
 </div>
-
 <%= link_to "New post", new_post_path %>
