--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,3 @@
-<span class="badge text-bg-danger me-">1 - Me gusta</span>
-<span class="badge text-bg-danger mb-2">0 - No me gusta</span>
 <%= render @post %>
 <div class="d-flex gap-1 my-3">
   <% Post::Kinds.each do |kind| %>
@@ -9,9 +7,9 @@ new_user_reaction_path(post_id: @post.id, reaction_type:
   <% end %>
 </div>
 <%= render 'comments/form' %>
-<div>
+<div class='text-end'>
   <%#= link_to "Edit this post", edit_post_path(@post) %>
-  <%#= link_to "Back to posts", posts_path %>
+  <%= link_to "Volver a publicaciones", posts_path,class:'btn btn-secondary btn-sm' %>
   <%#= button_to "Destroy this post", @post, method: :delete %>
-  <%= render 'comments/post_comments' %>
 </div>
+<%= render 'comments/post_comments' %>
