--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   </head>
   <body data-bs-theme="dark">
     <%= render 'shared/navbar' %>
-    <div class="container m-5 px-5">
-      <p class="notice" style="color: green"><%= notice %></p>
+    <div class="container px-5 mt-4">
       <p class="alert"><%= alert %></p>
+      <p class="notice py-3" style="color: green"><%= notice %></p>
       <%= yield %>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
