--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,6 @@
   <% if post.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
       <ul>
         <% post.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,23 +9,19 @@
       </ul>
     </div>
   <% end %>
-
   <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+    <%= form.label :title, 'Titulo', style: "display: block", class:'form-label' %>
+    <%= form.text_field :title, class:'form-control w-25' %>
   </div>
-
+  <%# <div> %>
+  <%#= form.label :when_went, 'Fecha', style: "display: block", class:'form-label' %>
+  <%#= form.datetime_field :when_went, class:'form-control w-25' %>
+  <%# </div> %>
   <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+    <%= form.label :description, 'Contenido', style: "display: block", class:'form-label' %>
+    <%= form.text_area :description, class:'form-control w-75', rows:'3' %>
   </div>
-
   <div>
-    <%= form.label :when_went, style: "display: block" %>
-    <%= form.datetime_field :when_went %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit 'Publicar', class:'btn btn-primary btn-sm mt-3' %>
   </div>
 <% end %>
