--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New post</h1>
-
+<h1>Nueva Publicacion</h1>
 <%= render "form", post: @post %>
-
 <br>
-
-<div>
-  <%= link_to "Back to posts", posts_path %>
+<div class='text-end'>
+  <%= link_to "Volver al inicio", posts_path, class:'btn btn-secondary btn-sm' %>
 </div>
